--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "name": "screencast-client",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "ws": "^8.17.0"
+    "electron": "^30.0.1",
+    "path": "^0.12.7",
+    "screenshot-desktop": "^1.15.0",
+    "socket.io-client": "^4.7.5",
+    "uuid": "^9.0.1"
   }
 }
